--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,6 @@ html, body {
 }
 
 .main-box {
-    width: 520px;
-    height: auto;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -14,7 +12,7 @@ html, body {
 .title-text {
     color: #b9babe;
     font-family: 'Jost', sans-serif;
-    font-size: 3.5rem;
+    font-size: 7vh;
     text-align: center;
     text-shadow: 0px 0px 10px rgba(0,0,0,0.5);
 }
@@ -22,7 +20,7 @@ html, body {
 .subtitle-text {
     color: #b9babe;
     font-family: 'Jost', sans-serif;
-    font-size: 1.5rem;
+    font-size: 2.5vh;
     text-align: center;
     text-shadow: 0px 0px 2px rgba(0,0,0,75);
 }
@@ -37,8 +35,8 @@ html, body {
 }
 
 .transparent-input-cover {
-    border: solid 1px #b9babe;
-    border-radius: 5px;
+    border: solid 0.1vh #b9babe;
+    border-radius: 1vh;
     -webkit-box-shadow: 0 2px 10px 1px rgba(0,0,0,0.2);
     box-shadow: 0 2px 10px 1px rgba(0,0,0,0.2);
 }
@@ -49,7 +47,8 @@ html, body {
     display: block;
     outline: none;
     width: -webkit-fill-available;
-    padding: 10px;
+    padding: 1vh;
+    font-size: 2vh;
     color: #b9babe;
 }
 ::-webkit-input-placeholder { color: #808080;} 
@@ -63,15 +62,17 @@ html, body {
 
 .pointer-svg {
     cursor: pointer;
+    width: 3vh;
 }
 
 .transparent-button {
     background: transparent;
-    border: solid 1px #b9babe;
-    border-radius: 5px;
-    width: 6rem;
-    height: 2.5rem;
+    border: solid 0.1vh #b9babe;
+    border-radius: 1vh;
+    width: 10vh;
+    height: 5vh;
     color: #b9babe;
+    font-size: 1.75vh;
     -webkit-box-shadow: 0 2px 10px 1px rgba(0,0,0,0.2);
     box-shadow: 0 2px 10px 1px rgba(0,0,0,0.2);
 }
