--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,17 @@
 html, body {
-    background-color: #222328;
+    background-color: #222328 !important;
+    position: absolute;
+    margin: 0;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
 }
 
 .main-box {
-    position: absolute;
+    position: fixed;
     left: 50%;
     top: 50%;
+    min-width: 340px;
     transform: translate(-50%, -50%);
 }
 
@@ -15,16 +21,6 @@ html, body {
     font-size: 7vh;
     text-align: center;
     text-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-}
-
-.rwd-line {
-    display: block;
-}
-
-@media screen and (min-width: 768px){
-    .rwd-line {
-        display: inline; 
-    }
 }
 
 .subtitle-text {
@@ -84,8 +80,7 @@ input[type=number]::-webkit-outer-spin-button {
     background: transparent;
     border: solid 0.2vh #b9babe;
     border-radius: 1vh;
-    width: 10vh;
-    height: 5vh;
+    height: 4.25vh;
     color: #b9babe;
     font-size: 1.75vh;
     -webkit-box-shadow: 0 2px 10px 1px rgba(0,0,0,0.2);
