--- a/css/main.css
+++ b/css/main.css
@@ -43,18 +43,20 @@ html, body {
 .transparent-input-cover {
     border: solid 0.2vh #b9babe;
     border-radius: 1vh;
+    align-items: center;
     -webkit-box-shadow: 0 2px 10px 1px rgba(0,0,0,0.2);
     box-shadow: 0 2px 10px 1px rgba(0,0,0,0.2);
 }
 
 .transparent-input {
     background: transparent;
+    font-family: 'Jost', sans-serif;
     border: none;
     display: block;
     outline: none;
     width: -webkit-fill-available;
     padding: 1vh;
-    font-size: 2vh;
+    font-size: 2.5vh;
     color: #b9babe;
 }
 ::-webkit-input-placeholder { color: #808080;} 
@@ -74,6 +76,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .pointer-svg {
     cursor: pointer;
+    display: flex;
 }
 
 .transparent-button {
