--- a/css/main.css
+++ b/css/main.css
@@ -11,14 +11,14 @@ html, body {
     position: fixed;
     left: 50%;
     top: 50%;
-    min-width: 340px;
+    min-width: 320px;
     transform: translate(-50%, -50%);
 }
 
 .title-text {
     color: #b9babe;
     font-family: 'Jost', sans-serif;
-    font-size: 7vh;
+    font-size: 60px;
     text-align: center;
     text-shadow: 0px 0px 10px rgba(0,0,0,0.5);
 }
@@ -26,23 +26,23 @@ html, body {
 .subtitle-text {
     color: #b9babe;
     font-family: 'Jost', sans-serif;
-    font-size: 2.5vh;
+    font-size: 20px;
     text-align: center;
     text-shadow: 0px 0px 2px rgba(0,0,0,75);
 }
 
 .form-margin {
-    margin-top: 3vh;
+    margin-top: 25px;
     text-align: center;
 }
 
 .col-padding {
-    padding-left: 0px !important;
+    padding-left: 0 !important;
 }
 
 .transparent-input-cover {
-    border: solid 0.2vh #b9babe;
-    border-radius: 1vh;
+    border: solid 1px #b9babe;
+    border-radius: 5px;
     align-items: center;
     -webkit-box-shadow: 0 2px 10px 1px rgba(0,0,0,0.2);
     box-shadow: 0 2px 10px 1px rgba(0,0,0,0.2);
@@ -55,8 +55,8 @@ html, body {
     display: block;
     outline: none;
     width: -webkit-fill-available;
-    padding: 1vh;
-    font-size: 2.5vh;
+    padding: 10px;
+    font-size: 22px;
     color: #b9babe;
 }
 ::-webkit-input-placeholder { color: #808080;} 
@@ -81,11 +81,12 @@ input[type=number]::-webkit-outer-spin-button {
 
 .transparent-button {
     background: transparent;
-    border: solid 0.2vh #b9babe;
-    border-radius: 1vh;
-    height: 4.25vh;
-    color: #b9babe;
-    font-size: 1.75vh;
+    font-family: 'Jost', sans-serif;
+    border: solid 1px #b9babe;
+    border-radius: 5px;
+    height: 40px;
+    color: rgba(185,186,190,0.75);
+    font-size: 17px;
     -webkit-box-shadow: 0 2px 10px 1px rgba(0,0,0,0.2);
     box-shadow: 0 2px 10px 1px rgba(0,0,0,0.2);
 }
