--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,9 @@ html, body {
 
 .main-box {
     position: fixed;
+    inline-size: fit-content;
+    padding-left: 35px;
+    padding-right: 35px;
     left: 50%;
     top: 50%;
     min-width: 320px;
@@ -28,12 +31,43 @@ html, body {
     font-family: 'Jost', sans-serif;
     font-size: 20px;
     text-align: center;
+    margin-bottom: 0px;
     text-shadow: 0px 0px 2px rgba(0,0,0,75);
+}
+
+.text-margin {
+    margin-top: 16px;
+    text-align: center;
 }
 
 .form-margin {
     margin-top: 25px;
     text-align: center;
+}
+
+.validation {
+    color: #ffa500;
+    font-family: 'Jost', sans-serif;
+    font-size: 22px;
+    text-shadow: 0px 0px 2px rgba(0,0,0,75);
+}
+
+@media only screen and (max-width: 380px) {
+    .validation {
+        color: #ffa500;
+        font-family: 'Jost', sans-serif;
+        font-size: 14px;
+        text-shadow: 0px 0px 2px rgba(0,0,0,75);
+    }
+}
+
+@media only screen and (min-width: 380px) and (max-width:480px) {
+    .validation {
+        color: #ffa500;
+        font-family: 'Jost', sans-serif;
+        font-size: 17px;
+        text-shadow: 0px 0px 2px rgba(0,0,0,75);
+    }
 }
 
 .col-padding {
