--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ html, body {
 
 .title-text {
     color: #b9babe;
-    font-family: 'Jost', sans-serif;
+    font-family: 'Jost';
     font-size: 60px;
     text-align: center;
     text-shadow: 0px 0px 10px rgba(0,0,0,0.5);
@@ -28,7 +28,7 @@ html, body {
 
 .subtitle-text {
     color: #b9babe;
-    font-family: 'Jost', sans-serif;
+    font-family: 'Jost';
     font-size: 20px;
     text-align: center;
     margin-bottom: 0px;
@@ -47,7 +47,7 @@ html, body {
 
 .validation {
     color: #ffa500;
-    font-family: 'Jost', sans-serif;
+    font-family: 'Jost';
     font-size: 22px;
     text-shadow: 0px 0px 2px rgba(0,0,0,75);
 }
@@ -55,7 +55,7 @@ html, body {
 @media only screen and (max-width: 380px) {
     .validation {
         color: #ffa500;
-        font-family: 'Jost', sans-serif;
+        font-family: 'Jost';
         font-size: 14px;
         text-shadow: 0px 0px 2px rgba(0,0,0,75);
     }
@@ -64,7 +64,7 @@ html, body {
 @media only screen and (min-width: 380px) and (max-width:480px) {
     .validation {
         color: #ffa500;
-        font-family: 'Jost', sans-serif;
+        font-family: 'Jost';
         font-size: 17px;
         text-shadow: 0px 0px 2px rgba(0,0,0,75);
     }
@@ -84,7 +84,7 @@ html, body {
 
 .transparent-input {
     background: transparent;
-    font-family: 'Jost', sans-serif;
+    font-family: 'Jost';
     border: none;
     display: block;
     outline: none;
@@ -115,7 +115,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .transparent-button {
     background: transparent;
-    font-family: 'Jost', sans-serif;
+    font-family: 'Jost';
     border: solid 1px #b9babe;
     border-radius: 5px;
     height: 40px;
