--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ html, body {
 }
 
 .title-text {
-    color: #b9babe;
+    color: #808080;
     font-family: 'Jost';
     font-size: 60px;
     text-align: center;
@@ -27,7 +27,7 @@ html, body {
 }
 
 .subtitle-text {
-    color: #b9babe;
+    color: #808080;
     font-family: 'Jost';
     font-size: 20px;
     text-align: center;
@@ -75,7 +75,7 @@ html, body {
 }
 
 .transparent-input-cover {
-    border: solid 1px #b9babe;
+    border: solid 1px #808080;
     border-radius: 5px;
     align-items: center;
     -webkit-box-shadow: 0 2px 10px 1px rgba(0,0,0,0.2);
@@ -91,7 +91,7 @@ html, body {
     width: -webkit-fill-available;
     padding: 10px;
     font-size: 22px;
-    color: #b9babe;
+    color: #808080;
 }
 ::-webkit-input-placeholder { color: #808080;} 
 :-moz-placeholder { color: #808080; }
@@ -116,7 +116,7 @@ input[type=number]::-webkit-outer-spin-button {
 .transparent-button {
     background: transparent;
     font-family: 'Jost';
-    border: solid 1px #b9babe;
+    border: solid 1px #808080;
     border-radius: 5px;
     height: 40px;
     color: rgba(185,186,190,0.75);
